Bug#18815 libmysql using yassl can't be linked with c program  - Apply patch to remove dependency on C++ libs when linking "libmysql" from c

extra/yassl/include/openssl/rsa.h:
  Fix spelling error
extra/yassl/include/openssl/ssl.h:
  Fix spelling error
extra/yassl/include/yassl_int.hpp:
  Remove static instance
extra/yassl/include/yassl_types.hpp:
  Add CleanUp function for static singletons
extra/yassl/src/handshake.cpp:
  Use buffered.reset(0) instead of null_buffer
extra/yassl/src/template_instnt.cpp:
  Add instantiation of two new templates
extra/yassl/src/yassl_int.cpp:
  Use static pointers for singletons
extra/yassl/taocrypt/include/integer.hpp:
  Remove statoc singletons from class scope
extra/yassl/taocrypt/include/misc.hpp:
  Add clenaup function
extra/yassl/taocrypt/include/runtime.hpp:
  Add runtime for Solaris
extra/yassl/taocrypt/src/algebra.cpp:
  Use mySTL::vector to avoid array of Element being on the stack
extra/yassl/taocrypt/src/integer.cpp:
  Use static pointers for singletons
  Add cleanup function
extra/yassl/taocrypt/src/template_instnt.cpp:
  Add instantiation of one new template